# qualpal

./: .gitignore  .release-please-manifest.json  .releaserc.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  Taskfile.yml  app.R  devenv.nix  flake.nix  netlify.toml  qualpal-config.cmake.in  release-please-config.json  valgrind.supp
.github/workflows/: build-and-test.yml  build-packages.yml  ci.yaml  codecov.yml  docs.yml  draft-pdf.yml  leaks.yml  rcmdcheck.yaml  release.yml
.task/checksum/: build-wasm
bindings/: CMakeLists.txt
bindings/r/: CMakeLists.txt  DESCRIPTION.in  NEWS.md  README.md  README.qmd  cran-comments.md
bindings/r/R/: qualpal.R  qualpalr-package.R
bindings/r/inst/: CITATION
bindings/r/qualpalr/: DESCRIPTION.in
bindings/r/qualpalr/R/: color-conversion.R  cvd-simulation.R  qualpal.R
bindings/r/qualpalr/src/: qualpalr.cpp
bindings/r/src/: qualpalr.cpp
bindings/r/tests/testthat/: test_color.R
bindings/r/vignettes/: introduction.Rmd  introduction.qmd  qualpal.bib
cmake/: CPackOptions.cmake.in  FindGcov.cmake  FindLcov.cmake  FindR.cmake  Findcodecov.cmake  cmake_uninstall.cmake.in
docs/: Doxyfile  Doxyfile.in  algorithm.md  colors.md  conf.py  examples.md  generate_palettes.sh  generate_plots.sh  getting_started.md  index.rst  mainpage.dox  mainpage.md  qualpal.help2man
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: cpp_doxygen_sphinx.doctree  index.doctree  qualpal.doctree  slope.doctree
docs/_build/html/: .buildinfo  annotated.html  classes.html  classslope_1_1Binomial-members.html  classslope_1_1Binomial.html  classslope_1_1Clusters-members.html  classslope_1_1Clusters.html  classslope_1_1Gaussian-members.html  classslope_1_1Gaussian.html  classslope_1_1Objective-members.html  classslope_1_1Objective.html  classslope_1_1SortedL1Norm-members.html  classslope_1_1SortedL1Norm.html  dir_65e9714ba03c6118b598ab15442fa91b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  genindex.html  hierarchy.html  index.html  objects.inv  search.html  searchindex.js  structslope_1_1Results-members.html  structslope_1_1Results.html  structslope_1_1ThresholdingResults-members.html  structslope_1_1ThresholdingResults.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/api/: cpp_doxygen_sphinx.rst.txt  qualpal.rst.txt  slope.rst.txt
docs/_build/html/api/: cpp_doxygen_sphinx.html  index.html  qualpal.html  slope.html
docs/_build/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_2.js  classes_6.js  searchdata.js
docs/_build/xml/: Doxyfile.xml  cd_8h.xml  classslope_1_1Binomial.xml  classslope_1_1Clusters.xml  classslope_1_1Gaussian.xml  classslope_1_1Objective.xml  classslope_1_1SortedL1Norm.xml  clusters_8cpp.xml  clusters_8h.xml  dir_65e9714ba03c6118b598ab15442fa91b.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  helpers_8h.xml  math_8h.xml  namespaceslope.xml  objectives_8cpp.xml  objectives_8h.xml  pgd_8h.xml  qnorm_8cpp.xml  qnorm_8h.xml  regularization__sequence_8cpp.xml  regularization__sequence_8h.xml  results_8h.xml  slope_8h.xml  slope__threshold_8cpp.xml  slope__threshold_8h.xml  sorted__l1__norm_8cpp.xml  sorted__l1__norm_8h.xml  standardize_8cpp.xml  standardize_8h.xml  structslope_1_1Results.xml  structslope_1_1ThresholdingResults.xml  utils_8h.xml
docs/api/: qualpal.rst
docs/plots/: color_space_progression.plt  hsl_sampling.plt  palette_strips.plt  selected_colors.plt
include/: qualpal  qualpal.h
include/qualpal/: analyze.h  color_difference.h  colors.h  core.h  matrix.h  metrics.h  qualpal.h
include/qualpal_bits/: color_difference.h  colors.h  core.h  matrix.h  metrics.h
paper/: .gitignore  paper.bib  paper.md
scripts/: .gitignore  generate_palette_strip.py  generate_palettes.py  install.sh  raw_data.json  validate-packages.sh
src/: CMakeLists.txt  main.cpp
src/qualpal/: analyze.cpp  color_difference.cpp  color_grid.cpp  color_grid.h  colors.cpp  colors.h  continuous_refinement.cpp  continuous_refinement.h  core.cpp  cvd_simulation.cpp  cvd_simulation.h  din99d.cpp  din99d.h  distance_matrix.cpp  distance_matrix.h  farthest_points.cpp  farthest_points.h  hsl.cpp  hsl.h  hsl_grid.cpp  hsl_grid.h  lab.cpp  lab.h  math.h  matrix.h  palettes.cpp  palettes.h  palettes_data.h  qualpal.cpp  qualpal.h  rgb.cpp  rgb.h  validation.cpp  validation.h  xyz.cpp  xyz.h
src/visualization/: generate_data.cpp
src/wasm/: bindings.cpp
tests/: analyze.cpp  benchmarks.cpp  cli.cpp  color_difference.cpp  colors.cpp  core.cpp  cvd.cpp  main.cpp  math.cpp  matrix.cpp  metrics.cpp  test.cpp  utils.cpp  validation.cpp
tools/: multistart_bench.cpp  tune_candidates.cpp
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: site.webmanifest
web/scripts/: build-citations.mjs
web/src/: App.svelte  Examples.svelte  HueWheel.svelte  LightnessSlider.svelte  PaletteAnalysis.svelte  SaturationSlider.svelte  app.css  qualpal.mjs  qualpal.wasm
web/src/components/: AboutModal.svelte  CopyButton.svelte  Examples.svelte  ExtendPalette.svelte  Footer.svelte  LoadingSpinner.svelte  PaletteAnalysis.svelte  PaletteDisplay.svelte  PaletteOutput.svelte  ParameterSidebar.svelte  Toast.svelte
web/src/components/params/: CollapsibleRegion.svelte  ExtendPalette.svelte  HueWheel.svelte
web/src/components/ui/: Accordion.svelte
web/src/lib/: citations.generated.json
web/src/stores/: cvdStore.js  paletteStore.js  toast.js
